# bracelet

./: .gitignore  CMakeLists.txt  README.md  adc_fft.c  ws2812.c
3D models/: AILED body.stl  AILED cap with USB.stl  AILED cap without USB.stl
application/: blecontroller.dart  main.dart
